--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <img src="VeriLLM.png" alt="Image Description" class="mini-profile-img">
         <div>
             <h3>TruthSeeker LLMs</h3>
-            <p>LLMs for Information Verification/p>
+            <p>LLMs for Information Verification</p>
         </div>
     </div>    
 
