--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
         <div>
             <h3>Realator</h3>
             <p>A Real simulator for the purpose of world model building</p>
+            <div class="links">
+                <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
+            </div>
         </div>
-        <div class="links">
-            <a href="https://github.com/SJ9VRF" target="https://github.com/SJ9VRF">GitHub</a>
-        </div>
-        
     </div>
+
+
+    
     <!-- Repeat for each additional square as needed, changing src, title, and description accordingly -->
 
     <div class="mini-bio-container">
