--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     <!-- Additional squares -->
     <div class="mini-bio-container">
         <img src="Realator.png" alt="Image Description" class="mini-profile-img">
-        <div>
+        <div class="content">
             <h3>Realator</h3>
             <p>A Real simulator for the purpose of world model building</p>
-            <div class="links">
-                <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
-            </div>
+        </div>
+        <div class="links">
+            <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
         </div>
     </div>
 
