--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="profile.jpg" alt="Profile Image" class="profile-img">
         <div class="bio-text">
             <p>Hi! I’m Aura, a Computer Science PhD candidate at the University of California, Davis. My research revolves around MultiModal Foundation Models and Agentic Workflows, with a special focus on enhancing decision-making systems.</p>
-            <p>I’ve worked on numerous machine learning projects bridging academia and industry. I’ve also led over 20 teams on machine learning projects, focusing on solving complex industrial problems through productive state of the art methods.</p>
+            <p>During my PhD, I completed an internship as an Applied Scientist with the Rufus team, focusing on Multimodality. I also spent a year at UC Berkeley as part of the UC Exchange Program. I have been involved in numerous machine learning projects that bridge the gap between academia and industry. Additionally, I have led over 20 teams of graduate students in various industrial machine learning projects, focusing on addressing complex industrial challenges through innovative, state-of-the-art methods.</p>
 
         </div>
         <div class="links">
