--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="bio-text">
             <p>Hi! I’m Aura, a Computer Science PhD candidate at the University of California, Davis. My research revolves around MultiModal Foundation Models and Agentic Workflows, with a special focus on enhancing decision-making systems.</p>
             <p> During my PhD, I completed an internship as an Applied Scientist at Amazon with the Rufus team, focusing on Multimodality. I also spent a year at UC Berkeley as part of the UC Exchange Program. I have been involved in numerous machine learning projects that bridge the gap between academia and industry. </p>
-            <p> Additionally, I have led over 20 teams of graduate students in various industrial machine learning projects, focusing on addressing complex industrial challenges through innovative, state-of-the-art methods. </p>
-            <p> At Munich Re, I designed and implemented an efficient agentic MLLM workflow for automated report generation. I also developed a system for RAG-based retrieval, document question answering, and summarization. Additionally, I designed ads-related retrieval based on search and user history and developed an RL-based reward system based on human feedback for Myket (Android App Store).</p>
+            <p> Additionally, I have led over 20 teams of graduate students in various industrial machine learning projects, focusing on addressing complex industrial challenges through innovative, state-of-the-art methods. 
+            At Munich Re, I designed and implemented an efficient agentic MLLM workflow for automated report generation. I also developed a system for RAG-based retrieval, document question answering, and summarization. Additionally, I designed ads-related retrieval based on search and user history and developed an RL-based reward system based on human feedback for Myket (Android App Store).</p>
         </div>
         <div class="links">
             <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">LinkedIn</a>
