--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             <h3>Call</h3>
             <p>A Communication Tunnel between agents allows them to share information safely and in a way that humans can understand. This enhances collaboration, improves decision-making, and ensures safety in complex environments and tasks.</p>
         </div>
+        <div class="links">
+            <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
+        </div>
     </div>
 
 
@@ -57,6 +60,9 @@
             <h3>Helping-Hands</h3>
             <p>How LLMs Guide and Learn from Robots in Long-Horizon and Complex Assembly Tasks Using Assembly Maps</p>
         </div>
+        <div class="links">
+            <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
+        </div>
     </div>
   
     <div class="mini-bio-container">
@@ -65,6 +71,9 @@
             <h3>DiffuNet</h3>
             <p>Neural Architectures with Diffusion Models</p>
         </div>
+        <div class="links">
+            <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
+        </div>        
     </div>   
     
     <div class="mini-bio-container">
@@ -72,6 +81,9 @@
         <div>
             <h3>ActPix2Pix</h3>
             <p>World Model Building Using Physical Action Variant</p>
+        </div>
+        <div class="links">
+            <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
         </div>
     </div>      
     
@@ -81,6 +93,9 @@
             <h3>TaskMasters</h3>
             <p>Mastering Natural Language for Robot Ears for Superior Task Execution</p>
         </div>
+        <div class="links">
+            <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
+        </div>
     </div>
 
     <div class="mini-bio-container">
@@ -88,6 +103,9 @@
         <div>
             <h3>MM4WM</h3>
             <p>Modality Tunning for World Model</p>
+        </div>
+        <div class="links">
+            <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
         </div>
     </div>
 
@@ -97,6 +115,9 @@
             <h3>BindingWorldModel</h3>
             <p>MultiModal Binding for World Modeling</p>
         </div>
+        <div class="links">
+            <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
+        </div>
     </div>
 
     <div class="mini-bio-container">
@@ -104,6 +125,10 @@
         <div>
             <h3>TransReward</h3>
             <p>Multi-Task and Multi-Dynamics Learning by Reward Transfer</p>
+        </div>
+
+        <div class="links">
+            <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
         </div>
     </div>
 
@@ -114,6 +139,9 @@
             <h3>AdFlux Engine</h3>
             <p>AdFlux Engine is a Foundation model for Advertisement Simulation, predicting user behavior (clicks/views) from historical data. Utilizing advanced models like LAVA, Decision Transformers, Gato, and MuZero, it optimizes ad placements and boosts user engagement. Built for scalability, it integrates NLP, RL, and RLHF techniques.</p>
         </div>
+        <div class="links">
+            <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
+        </div>
     </div>
 
     <div class="mini-bio-container">
@@ -121,6 +149,9 @@
         <div>
             <h3>TruthSeeker LLMs</h3>
             <p>LLMs for Information Verification</p>
+        </div>
+        <div class="links">
+            <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
         </div>
     </div>    
 
@@ -130,6 +161,10 @@
             <h3>AdFlux Agentic Engine</h3>
             <p>Agentic advertising workflow leveraging LLMs and advertising foundation models to optimize digital advertising. It combines general advertising processes with specific steps to deliver highly relevant ads that are well-timed, ensuring continuous optimization for user engagement and advertiser conversion goals</p>
         </div>
+
+        <div class="links">
+            <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
+        </div>
     </div>
 
     <div class="mini-bio-container">
@@ -137,6 +172,9 @@
         <div>
             <h3>LLM Communicators</h3>
             <p>llms are great communicators: enhancing llm capabilities via communication</p>
+        </div>
+        <div class="links">
+            <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
         </div>
     </div>
 
