--- a/index.html
+++ b/index.html
@@ -140,20 +140,22 @@
             <p>AdFlux Engine is a Foundation model for Advertisement Simulation, predicting user behavior (clicks/views) from historical data. Utilizing advanced models like LAVA, Decision Transformers, Gato, and MuZero, it optimizes ad placements and boosts user engagement. Built for scalability, it integrates NLP, RL, and RLHF techniques.</p>
         </div>
         <div class="links">
-            <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
+            <a href="https://github.com/SJ9VRF/AdFlux-Engine" target="_blank">GitHub</a>
         </div>
     </div>
 
+
     <div class="mini-bio-container">
-        <img src="VeriLLM.png" alt="Image Description" class="mini-profile-img">
+        <img src="TransReward.png" alt="Image Description" class="mini-profile-img">
         <div>
-            <h3>TruthSeeker LLMs</h3>
-            <p>LLMs for Information Verification</p>
+            <h3>TransReward22</h3>
+            <p>Multi-Task and Multi-Dynamics Learning by Reward Transfer</p>
         </div>
+
         <div class="links">
             <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
         </div>
-    </div>    
+    </div>  
 
     <div class="mini-bio-container">
         <img src="AdFlux Agentic Engine.png" alt="Image Description" class="mini-profile-img">
@@ -163,7 +165,7 @@
         </div>
 
         <div class="links">
-            <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
+            <a href="https://github.com/SJ9VRF/AdFlux-Agentic-Engine" target="_blank">GitHub</a>
         </div>
     </div>
 
