--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
 
 
     <div class="mini-bio-container">
-        <img src="TransReward.png" alt="Image Description" class="mini-profile-img">
+        <img src="VeriLLM.png" alt="Image Description" class="mini-profile-img">
         <div>
-            <h3>TransReward22</h3>
-            <p>Multi-Task and Multi-Dynamics Learning by Reward Transfer</p>
+            <h3>TruthSeeker LLMs</h3>
+            <p>LLMs for Information Verification</p>
         </div>
 
         <div class="links">
