--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
 
     <div class="mini-bio-container">
-        <img src="TransReward.png" alt="Image Description" class="mini-profile-img">
+        <img src="verillm.png" alt="Image Description" class="mini-profile-img">
         <div>
             <h3>TruthSeeker LLMs</h3>
             <p>LLMs for Information Verification</p>
