--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </div>
 
 
-    <!-- Section Header for Selected Research Projects -->
-    <h2 class="section-header">Selected Research Projects</h2>
+    <!-- Section Header for Selected Projects -->
+    <h2 class="section-header">Selected Projects</h2>
     
     <!-- Additional squares -->
     <div class="mini-bio-container">
