--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <img src="Realator.png" alt="Image Description" class="mini-profile-img">
         <div class="content">
             <h3>Realator</h3>
-            <p>A Real simulator for the purpose of world model building</p>
+            <p>A simulator for world model building integrates foundation models with RL to simulate and predict real-world scenarios. It incorporates physical interactions and physics intelligence to learn environmental dynamics, enabling accurate decision-making and adaptive behaviors in real environments.</p>
         </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
@@ -46,7 +46,7 @@
         <img src="call.png" alt="Image Description" class="mini-profile-img">
         <div>
             <h3>Call</h3>
-            <p>A Communication Tunnel between agents allows them to share information safely and in a way that humans can understand. This enhances collaboration, improves decision-making, and ensures safety in complex environments and tasks.</p>
+            <p>A Communication Tunnel between agents enables secure, interpretable info exchange, enhancing collaboration, decision-making, and safety. With foundation models, RL feedback, and reward systems, multi-agent LLMs adapt, align to human goals, and optimize task performance iteratively.</p>
         </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
