--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <img src="helpinghands.png" alt="Image Description" class="mini-profile-img">
         <div>
             <h3>Helping-Hands</h3>
-            <p>How LLMs Guide and Learn from Robots in Long-Horizon and Complex Assembly Tasks Using Assembly Maps</p>
+            <p>This study uses Vision-Language Models (VLMs) to interpret structured assembly maps for robots in long-horizon tasks. LLMs convert visual assembly steps into textual instructions, validating consistency with prior steps, enabling efficient robotic execution with minimal feedback.</p>
         </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
@@ -69,7 +69,7 @@
         <img src="DiffuNet.png" alt="Image Description" class="mini-profile-img">
         <div>
             <h3>DiffuNet</h3>
-            <p>Neural Architectures with Diffusion Models</p>
+            <p>Diffusion models refine random noise into structured outputs, aiding neural architecture design by learning a reverse denoising process. They encode architectures as graphs or sequences, generating diverse samples that meet performance constraints. This advances NAS by automating scalable, efficient designs.</p>
         </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
