--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <img src="ActPix2Pix.png" alt="Image Description" class="mini-profile-img">
         <div>
             <h3>ActPix2Pix</h3>
-            <p>World Model Building Using Physical Action Variant</p>
+            <p>This project integrates Vision-Action-Language Models with Foundation Models using RL for agentic workflows. It incorporates scene synthesis via action variants, enabling AI to learn world dynamics and optimize decisions in embodied AI and ad systems.</p>
         </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
