--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <img src="TransReward.png" alt="Image Description" class="mini-profile-img">
         <div>
             <h3>TransReward</h3>
-            <p>Exploring multi-robot, multi-task transfer through reward compensation and reinforcement learning (RL), we developed a scalable framework enabling robots to learn from one another. Using RL, we optimized policy adaptation for varying dynamics, morphologies, and resource constraints. Our approach integrates reward compensation to enhance RL exploration and exploitation, enabling efficient task and dynamics transfer. Co-training strategies further refine policy updates for source and target robots, ensuring mutual learning and convergence. This novel RL-based framework demonstrates improved performance in multi-robot environments, emphasizing data efficiency and adaptability to resource-limited tasks.</p>
+            <p>Exploring multi-robot, multi-task transfer through reward compensation and reinforcement learning (RL), we developed a scalable framework enabling robots to learn from one another. Using RL, we optimized policy adaptation for varying dynamics, morphologies, and resource constraints. Our approach integrates reward compensation to enhance RL exploration and exploitation, enabling efficient task and dynamics transfer. Co-training strategies further refine policy updates for source and target robots, ensuring mutual learning and convergence.</p>
         </div>
 
         <div class="links">
