--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <img src="verillm.png" alt="Image Description" class="mini-profile-img">
         <div>
             <h3>TruthSeeker LLMs</h3>
-            <p>LLMs for Information Verification</p>
+            <p>TruthSeeker LLM uses multimodal inputs (text, images), extracting embeddings via pretrained LLMs and Vision Transformers (ViT). Steps include (1) data preprocessing, (2) feature extraction, (3) fact-verification via trusted sources, and (4) RLHF fine-tuning. It predicts credibility with confidence scores for misinformation detection.</p>
         </div>
 
         <div class="links">
