--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </div>
 
         <div class="links">
-            <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
+            <a href="https://github.com/SJ9VRF/VeriLLM/tree/main" target="_blank">GitHub</a>
         </div>
     </div>  
 
@@ -176,7 +176,7 @@
             <p>This project develops a RAG-based communication tunnel enabling collaborative interaction across heterogeneous LLMs, such as GPT-3, PaLM, and BERT. The method integrates advanced query decomposition, allocating tasks to LLMs based on specialization, and retrieval-augmented preprocessing, where each model extracts contextual and historical evidence. A multi-tier communication framework allows iterative reasoning, targeted questioning, and data validation among LLMs, culminating in a consensus-driven synthesis using weighted voting mechanisms. Feedback and reinforcement loops further optimize task-specific interactions, reducing hallucinations and enhancing consistency.</p>
         </div>
         <div class="links">
-            <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
+            <a href="https://github.com/SJ9VRF/LLM-COMMUNICATORS" target="_blank">GitHub</a>
         </div>
     </div>
 
