--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <img src="TaskMasters.png" alt="Image Description" class="mini-profile-img">
         <div>
             <h3>TaskMasters</h3>
-            <pThis project uses LLMs to optimize robotic task execution by improving command clarity. The model takes (initial+goal states) or (initial state+language command) as input. It employs RLHF, fine-tuning, and task-specific data to generate precise, effective instructions.</p>
+            <p></p>This project uses LLMs to optimize robotic task execution by improving command clarity. The model takes (initial+goal states) or (initial state+language command) as input. It employs RLHF, fine-tuning, and task-specific data to generate precise, effective instructions.</p>
         </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
