--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <img src="Binding4WM.png" alt="Image Description" class="mini-profile-img">
         <div>
             <h3>MM4WM</h3>
-            <p>Modality Tunning for World Model</p>
+            <p>MM4WM integrates the training and learning processes of foundation models with a novel architecture that emphasizes physical intelligence and multimodal perception learning. By leveraging aligned embeddings in a shared space, it fine-tunes models to process and reason over diverse inputs, combining reinforcement learning and world model predictions to refine adaptive, context-aware agent performance in dynamic environments.</p>
         </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
