--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <img src="BindingWorldModel.png" alt="Image Description" class="mini-profile-img">
         <div>
             <h3>BindingWorldModel</h3>
-            <p>MultiModal Binding for World Modeling</p>
+            <p>The BindingWorldModel approach integrates multimodal data to construct coherent world models by leveraging cross-modal attention mechanisms and latent-space alignment. Using contrastive transformer-based architectures, it binds visual, textual, and sensor data into unified latent representations, significantly enhancing physical intelligence, perception, and interaction. This enables dynamic decision-making, adaptive control, and seamless real-world task execution, providing a robust framework for physical intelligence tasks.</p>
         </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
