--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <div class="links">
             <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
         </div>
+        <div class="links">
+            <a href="https://github.com/SJ9VRF/TaskMasters/blob/main/taskmasters.pdf" target="_blank">Paper</a>
+        </div>
     </div>
 
 
