--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             <p>A simulator for world model building integrates foundation models with RL to simulate and predict real-world scenarios. It incorporates physical interactions and physics intelligence to learn environmental dynamics, enabling accurate decision-making and adaptive behaviors in real environments.</p>
         </div>
         <div class="links">
-            <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
+            <a href="https://github.com/SJ9VRF" target="https://github.com/SJ9VRF">GitHub</a>
+            <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
+        </div>
         </div>
     </div>
 
