--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
         </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF/TaskMasters/blob/main/taskmasters.pdf" target="_blank">Paper</a>
+            <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
+        </div>
         </div>
     </div>
 
@@ -66,6 +68,8 @@
         </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
+        </div>
         </div>
     </div>
   
@@ -77,7 +81,9 @@
         </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
-        </div>        
+            <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
+        </div>
+        </div>     
     </div>   
     
     <div class="mini-bio-container">
@@ -88,6 +94,8 @@
         </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
+        </div>
         </div>
     </div>      
     
@@ -99,6 +107,8 @@
         </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
+        </div>
         </div>
     </div>
 
@@ -110,6 +120,8 @@
         </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
+        </div>
         </div>
     </div>
 
@@ -121,6 +133,8 @@
         </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
+        </div>
         </div>
     </div>
 
@@ -133,6 +147,8 @@
 
         <div class="links">
             <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
+        </div>
         </div>
     </div>
 
@@ -145,6 +161,8 @@
         </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF/AdFlux-Engine" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
+        </div>
         </div>
     </div>
 
@@ -155,9 +173,10 @@
             <h3>TruthSeeker LLMs</h3>
             <p>TruthSeeker LLM uses multimodal inputs (text, images), extracting embeddings via pretrained LLMs and Vision Transformers (ViT). Steps include (1) data preprocessing, (2) feature extraction, (3) fact-verification via trusted sources, and (4) RLHF fine-tuning. It predicts credibility with confidence scores for misinformation detection.</p>
         </div>
-
         <div class="links">
             <a href="https://github.com/SJ9VRF/VeriLLM/tree/main" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
+        </div>
         </div>
     </div>  
 
@@ -170,6 +189,8 @@
 
         <div class="links">
             <a href="https://github.com/SJ9VRF/AdFlux-Agentic-Engine" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
+        </div>
         </div>
     </div>
 
@@ -181,6 +202,8 @@
         </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF/LLM-COMMUNICATORS" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
+        </div>
         </div>
     </div>
 
