--- a/index.html
+++ b/index.html
@@ -45,16 +45,12 @@
 
     <div class="mini-bio-container">
         <img src="call.png" alt="Image Description" class="mini-profile-img">
-        <div>
+        <div class="content">
             <h3>Call</h3>
             <p>A Communication Tunnel between agents enables secure, interpretable info exchange, enhancing collaboration, decision-making, and safety. With foundation models, RL feedback, and reward systems, multi-agent LLMs adapt, align to human goals, and optimize task performance iteratively.</p>
-        </div>
         <div class="links">
-            <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
-        </div>
-        <div class="links">
+            <a href="https://github.com/SJ9VRF" target="https://github.com/SJ9VRF">GitHub</a>
             <a href="https://github.com/SJ9VRF/TaskMasters/blob/main/taskmasters.pdf" target="_blank">Paper</a>
-            <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
         </div>
         </div>
     </div>
@@ -62,10 +58,9 @@
 
     <div class="mini-bio-container">
         <img src="helpinghands.png" alt="Image Description" class="mini-profile-img">
-        <div>
+        <div class="content">
             <h3>Helping-Hands</h3>
             <p>This study uses Vision-Language Models (VLMs) to interpret structured assembly maps for robots in long-horizon tasks. LLMs convert visual assembly steps into textual instructions, validating consistency with prior steps, enabling efficient robotic execution with minimal feedback.</p>
-        </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
@@ -75,10 +70,9 @@
   
     <div class="mini-bio-container">
         <img src="DiffuNet.png" alt="Image Description" class="mini-profile-img">
-        <div>
+        <div class="content">
             <h3>DiffuNet</h3>
             <p>Diffusion models refine random noise into structured outputs, aiding neural architecture design by learning a reverse denoising process. They encode architectures as graphs or sequences, generating diverse samples that meet performance constraints. This advances NAS by automating scalable, efficient designs.</p>
-        </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
