--- a/index.html
+++ b/index.html
@@ -82,10 +82,9 @@
     
     <div class="mini-bio-container">
         <img src="ActPix2Pix.png" alt="Image Description" class="mini-profile-img">
-        <div>
+        <div class="content">
             <h3>ActPix2Pix</h3>
             <p>This project integrates Vision-Action-Language Models with Foundation Models using RL for agentic workflows. It incorporates scene synthesis via action variants, enabling AI to learn world dynamics and optimize decisions in embodied AI and ad systems.</p>
-        </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
@@ -95,10 +94,9 @@
     
     <div class="mini-bio-container">
         <img src="TaskMasters.png" alt="Image Description" class="mini-profile-img">
-        <div>
+        <div class="content">
             <h3>TaskMasters</h3>
             <p>This project uses LLMs to optimize robotic task execution by improving command clarity. The model takes (initial+goal states) or (initial state+language command) as input. It employs RLHF, fine-tuning, and task-specific data to generate precise, effective instructions.</p>
-        </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
@@ -108,10 +106,9 @@
 
     <div class="mini-bio-container">
         <img src="Binding4WM.png" alt="Image Description" class="mini-profile-img">
-        <div>
+        <div class="content">
             <h3>MM4WM</h3>
             <p>MM4WM integrates the training and learning processes of foundation models with a novel architecture that emphasizes physical intelligence and multimodal perception learning. By leveraging aligned embeddings in a shared space, it fine-tunes models to process and reason over diverse inputs, combining reinforcement learning and world model predictions to refine adaptive, context-aware agent performance in dynamic environments.</p>
-        </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
@@ -121,10 +118,9 @@
 
     <div class="mini-bio-container">
         <img src="BindingWorldModel.png" alt="Image Description" class="mini-profile-img">
-        <div>
+        <div class="content">
             <h3>BindingWorldModel</h3>
             <p>BindingWorldModel integrates multimodal data to construct coherent world models by leveraging cross-modal attention mechanisms and latent-space alignment. Using contrastive transformer-based architectures, it binds visual, textual, and sensor data into unified latent representations, enhancing physical intelligence, perception, and interaction.</p>
-        </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
@@ -134,11 +130,9 @@
 
     <div class="mini-bio-container">
         <img src="TransReward.png" alt="Image Description" class="mini-profile-img">
-        <div>
+        <div class="content">
             <h3>TransReward</h3>
             <p>Exploring multi-robot, multi-task transfer through reward compensation and reinforcement learning (RL), we developed a scalable framework enabling robots to learn from one another. Using RL, we optimized policy adaptation for varying dynamics, morphologies, and resource constraints. Our approach integrates reward compensation to enhance RL exploration and exploitation, enabling efficient task and dynamics transfer. Co-training strategies further refine policy updates for source and target robots, ensuring mutual learning and convergence.</p>
-        </div>
-
         <div class="links">
             <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
@@ -149,10 +143,9 @@
 
     <div class="mini-bio-container">
         <img src="AdFlux.png" alt="Image Description" class="mini-profile-img">
-        <div>
+        <div class="content">
             <h3>AdFlux Engine</h3>
             <p>AdFlux Engine is a Foundation model for Advertisement Simulation, predicting user behavior (clicks/views) from historical data. Utilizing advanced models like LAVA, Decision Transformers, Gato, and MuZero, it optimizes ad placements and boosts user engagement. Built for scalability, it integrates NLP, RL, and RLHF techniques.</p>
-        </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF/AdFlux-Engine" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
@@ -163,10 +156,9 @@
 
     <div class="mini-bio-container">
         <img src="verillm.png" alt="Image Description" class="mini-profile-img">
-        <div>
+        <div class="content">
             <h3>TruthSeeker LLMs</h3>
             <p>TruthSeeker LLM uses multimodal inputs (text, images), extracting embeddings via pretrained LLMs and Vision Transformers (ViT). Steps include (1) data preprocessing, (2) feature extraction, (3) fact-verification via trusted sources, and (4) RLHF fine-tuning. It predicts credibility with confidence scores for misinformation detection.</p>
-        </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF/VeriLLM/tree/main" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
@@ -176,11 +168,9 @@
 
     <div class="mini-bio-container">
         <img src="AdFlux Agentic Engine.png" alt="Image Description" class="mini-profile-img">
-        <div>
+        <div class="content">
             <h3>AdFlux Agentic Engine</h3>
             <p>Agentic advertising workflow leveraging LLMs and advertising foundation models to optimize digital advertising. It combines general advertising processes with specific steps to deliver highly relevant ads that are well-timed, ensuring continuous optimization for user engagement and advertiser conversion goals</p>
-        </div>
-
         <div class="links">
             <a href="https://github.com/SJ9VRF/AdFlux-Agentic-Engine" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
@@ -190,10 +180,9 @@
 
     <div class="mini-bio-container">
         <img src="LLM-COMMUNICATORS.png" alt="Image Description" class="mini-profile-img">
-        <div>
+        <div class="content">
             <h3>LLM Communicators</h3>
             <p>This project develops a RAG-based communication tunnel enabling collaborative interaction across heterogeneous LLMs, such as GPT-3, PaLM, and BERT. The method integrates advanced query decomposition, allocating tasks to LLMs based on specialization, and retrieval-augmented preprocessing, where each model extracts contextual and historical evidence. A multi-tier communication framework allows iterative reasoning, targeted questioning, and data validation among LLMs, culminating in a consensus-driven synthesis using weighted voting mechanisms. Feedback and reinforcement loops further optimize task-specific interactions, reducing hallucinations and enhancing consistency.</p>
-        </div>
         <div class="links">
             <a href="https://github.com/SJ9VRF/LLM-COMMUNICATORS" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
