--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <p>AdFlux Engine is a Foundation model for Advertisement Simulation, predicting user behavior (clicks/views) from historical data. Utilizing advanced models like LAVA, Decision Transformers, Gato, and MuZero, it optimizes ad placements and boosts user engagement. Built for scalability, it integrates NLP, RL, and RLHF techniques.</p>
         <div class="links">
             <a href="https://github.com/SJ9VRF/AdFlux-Engine" target="_blank">GitHub</a>
-            <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
+          <!--   <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a> --> 
         </div>
         </div>
     </div>
@@ -159,10 +159,12 @@
         <div class="content">
             <h3>TruthSeeker LLMs</h3>
             <p>TruthSeeker LLM uses multimodal inputs (text, images), extracting embeddings via pretrained LLMs and Vision Transformers (ViT). Steps include (1) data preprocessing, (2) feature extraction, (3) fact-verification via trusted sources, and (4) RLHF fine-tuning. It predicts credibility with confidence scores for misinformation detection.</p>
+        <!-- 
         <div class="links">
             <a href="https://github.com/SJ9VRF/VeriLLM/tree/main" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
         </div>
+        --> 
         </div>
     </div>  
 
@@ -171,10 +173,12 @@
         <div class="content">
             <h3>AdFlux Agentic Engine</h3>
             <p>Agentic advertising workflow leveraging LLMs and advertising foundation models to optimize digital advertising. It combines general advertising processes with specific steps to deliver highly relevant ads that are well-timed, ensuring continuous optimization for user engagement and advertiser conversion goals</p>
+        
         <div class="links">
             <a href="https://github.com/SJ9VRF/AdFlux-Agentic-Engine" target="_blank">GitHub</a>
-            <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
+         <!--    <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>  --> 
         </div>
+           
         </div>
     </div>
 
@@ -183,10 +187,12 @@
         <div class="content">
             <h3>LLM Communicators</h3>
             <p>This project develops a RAG-based communication tunnel enabling collaborative interaction across heterogeneous LLMs, such as GPT-3, PaLM, and BERT. The method integrates advanced query decomposition, allocating tasks to LLMs based on specialization, and retrieval-augmented preprocessing, where each model extracts contextual and historical evidence. A multi-tier communication framework allows iterative reasoning, targeted questioning, and data validation among LLMs, culminating in a consensus-driven synthesis using weighted voting mechanisms. Feedback and reinforcement loops further optimize task-specific interactions, reducing hallucinations and enhancing consistency.</p>
+        <!-- 
         <div class="links">
             <a href="https://github.com/SJ9VRF/LLM-COMMUNICATORS" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
         </div>
+        -->    
         </div>
     </div>
 
