--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
             <h3>TransReward</h3>
             <p>Exploring multi-robot, multi-task transfer through reward compensation and reinforcement learning (RL), we developed a scalable framework enabling robots to learn from one another. Using RL, we optimized policy adaptation for varying dynamics, morphologies, and resource constraints. Our approach integrates reward compensation to enhance RL exploration and exploitation, enabling efficient task and dynamics transfer. Co-training strategies further refine policy updates for source and target robots, ensuring mutual learning and convergence.</p>
         <div class="links">
-            <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
-            <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
+            <a href="https://github.com/SJ9VRF/TransReward" target="_blank">GitHub</a>
+            <a href="https://github.com/SJ9VRF/TransReward/blob/main/TransReward.pdf" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
         </div>
         </div>
     </div>
