--- a/index.html
+++ b/index.html
@@ -135,12 +135,11 @@
         <div class="content">
             <h3>BindingWorldModel</h3>
             <p>BindingWorldModel integrates multimodal data to construct coherent world models by leveraging cross-modal attention mechanisms and latent-space alignment. Using contrastive transformer-based architectures, it binds visual, textual, and sensor data into unified latent representations, enhancing physical intelligence, perception, and interaction.</p>
-        <!--       
+              
         <div class="links">
-            <a href="https://github.com/SJ9VRF" target="_blank">GitHub</a>
-            <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>
+            <a href="https://github.com/SJ9VRF/BindingWorldModel" target="_blank">GitHub</a>
+       <!--      <a href="https://www.linkedin.com/in/arefehyavary/" target="https://www.linkedin.com/in/arefehyavary/">Paper</a>  -->
         </div>
-            -->
         </div>
     </div>
 
